# poly-approx

./: .gitignore  CMakeLists.txt  compile_commands.json  polinom.sln  runconfig.json  surfaces.json  vcpkg.json
polinom/: FunctionApproximator.h  SegmentedChebyshevApproximator.cpp  SegmentedChebyshevApproximator.h  monom.h  polinom.cpp  polinom.vcxproj  polinom.vcxproj.filters  render.h
src/: FunctionApproximator.h  SegmentedChebyshevApproximator.cpp  SegmentedChebyshevApproximator.h  chebseg.hpp  eigen.natvis  exceptions.cpp  exceptions.hpp  experiment_config.cpp  experiment_config.hpp  fun.hpp  glm_parsers.hpp  logging.cpp  logging.hpp  main.cpp  monom.h  monseg.hpp  polinom.cpp  polinom.vcxproj  polinom.vcxproj.filters  render.h  renderer.hpp  run_config.cpp  run_config.hpp  scenelib.cpp  scenelib.hpp  seg.hpp  tracer.hpp  types.hpp
